themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
/* ... */
.alert-message a {
	font-weight: bold;
	color: #404040;
}

.alert-message.danger p a,
.alert-message.error p a,
.alert-message.success p a,
.alert-message.info p a {
	color: #fff;
}

.alert-message h5 {
	line-height: 18px;
}

.alert-message p {
	margin-bottom: 0;
}

.alert-message div {
	margin-top: 5px;
	margin-bottom: 2px;
	line-height: 28px;
}

.label {
	padding: 1px 3px 2px;
	font-size: 9.75px;
	font-weight: bold;
	color: #fff !important;
	text-transform: uppercase;
	white-space: nowrap;
	background-color: #bfbfbf;
	border-radius: 3px;
	text-shadow: none;
}

a.label:link,
a.label:visited {
	color: #fff;
}

a.label:hover {
	text-decoration: none;
}

.label.important {
	background-color: #c43c35;
}

.label.warning {
	background-color: #f89406;
}

.label.success {
	background-color: #46a546;
}

.label.notice {
	background-color: #62cffc;
}

/* LuCI specific items */
.hidden { display: none }

#memtotal > div,
#memfree > div,
#memcache > div,
#membuff > div,
#conns > div  {
	  border: 1px solid #ccc;
	  border-radius: 3px 3px 3px 3px;
	  color: #808080;
	  display: inline-block;
	  font-size: 13px;
	  line-height: 18px;
}

#xhr_poll_status {
	  cursor: pointer;
}

form.inline { display: inline; margin-bottom: 0; }

header .pull-right { padding-top: 8px; }

#modemenu li:last-child span.divider { display: none }

#syslog {  width: 100%; }

.cbi-section-table .tr:hover .td,
.cbi-section-table .tr:hover .th,
.cbi-section-table .tr:hover::before {
	background-color: #f5f5f5;
}

.cbi-section-table .tr.cbi-section-table-descr .th {
	font-weight: normal;
}

.cbi-section-table-titles.named::before,
.cbi-section-table-descr.named::before,
.cbi-section-table-row[data-title]::before {
	content: attr(data-title) " ";
	display: table-cell;
	padding: 10px 10px 9px;
	line-height: 18px;
	font-weight: bold;
	vertical-align: middle;
}

.cbi-section-table-titles.named::before,
.cbi-section-table-descr.named::before,
.cbi-section-table-row[data-title]::before {
	border-top: 1px solid #ddd;
}

.left { text-align: left !important; }
.right { text-align: right !important; }
.center { text-align: center !important; }
.top { vertical-align: top !important; }
.middle { vertical-align: middle !important; }
.bottom { vertical-align: bottom !important; }

.cbi-value-field { line-height: 1.5em; }

.cbi-value-field input[type=checkbox],
.cbi-value-field input[type=radio] {
	margin-top: 8px;
	margin-right: 6px;
}

table table td,
.cbi-value-field table td {
	border: none;
}

.table.cbi-section-table input[type="password"],
.table.cbi-section-table input[type="text"],
.table.cbi-section-table textarea,
.table.cbi-section-table select {
	width: 100%;
}

.table.cbi-section-table .td.cbi-section-table-cell {
	white-space: nowrap;
	text-align: right;
}

.table.cbi-section-table .td.cbi-section-table-cell select {
	width: inherit;
}

.td.cbi-section-actions {
	text-align: right;
	vertical-align: middle;
}

.td.cbi-section-actions > * {
	display: flex;
}

.td.cbi-section-actions > * > *,
.td.cbi-section-actions > * > form > * {
	flex: 1 1 4em;
	margin: 0 1px;
}

.td.cbi-section-actions > * > form {
	display: inline-flex;
	margin: 0;
}

.table.valign-middle .td {
	vertical-align: middle;
}

.cbi-rowstyle-2,
.tr.table-titles,
.tr.cbi-section-table-titles {
	background: #f9f9f9;
}

.cbi-value-description {
	background-image: url(/luci-static/resources/cbi/help.gif);
	background-position: .25em .2em;
	background-repeat: no-repeat;
	margin: .25em 0 0 0;
	padding: 0 0 0 1.7em;
}

.cbi-section-error {
	border: 1px solid #f00;
	border-radius: 3px;
	background-color: #fce6e6;
	padding: 5px;
	margin-bottom: 18px;
}

.cbi-section-error ul { margin: 0 0 0 20px; }

.cbi-section-error ul li {
	color: #f00;
	font-weight: bold;
}

.ifacebox {
	background-color: #fff;
	border: 1px solid #ccc;
	margin: 0 10px;
	text-align: center;
	white-space: nowrap;
	background-image: linear-gradient(#fff, #fff 25%, #f9f9f9);
	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
	border-radius: 4px;
	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
	display: inline-flex;
	flex-direction: column;
	line-height: 1.2em;
	min-width: 100px;
}

.ifacebox .ifacebox-head {
	border-bottom: 1px solid #ccc;
	padding: 2px;
	background: #eee;
}

.ifacebox .ifacebox-head.active {
	background: #90c0e0;
}

.ifacebox .ifacebox-body {
	padding: .25em;
}

.ifacebadge {
	display: inline-block;
	flex-direction: row;
	white-space: nowrap;
	background-color: #fff;
	border: 1px solid #ccc;
	padding: 2px;
	background-image: linear-gradient(#fff, #fff 25%, #f9f9f9);
	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
	border-radius: 4px;
	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
	cursor: default;
	line-height: 1.2em;
}

.ifacebadge img {
	width: 16px;
	height: 16px;
	vertical-align: middle;
}

.ifacebadge-active {
	border-color: #000;
	font-weight: bold;
}

.network-status-table {
	display: flex;
	flex-wrap: wrap;
}

.network-status-table .ifacebox {
	margin: .5em;
	flex-grow: 1;
}

.network-status-table .ifacebox-body {
	display: flex;
	flex-direction: column;
	height: 100%;
	text-align: left;
}

.network-status-table .ifacebox-body > * {
	margin: .25em;
}

.network-status-table .ifacebox-body > span {
	flex: 10 10 auto;
	height: 100%;
}

.network-status-table .ifacebox-body > div {
	display: flex;
	flex-wrap: wrap;
	margin: -.125em;
}

#dsl_status_table .ifacebox-body > span > strong {
	display: inline-block;
	min-width: 35%;
}

.ifacebadge.large,
.network-status-table .ifacebox-body .ifacebadge {
	display: inline-flex;
	flex: 1;
	padding: .25em;
	min-width: 220px;
	margin: .125em;
}

.ifacebadge > *,
.ifacebadge.large > * {
	margin: 0 .125em;
}

.zonebadge {
	padding: 2px;
	border-radius: 4px;
	display: inline-block;
	white-space: nowrap;
	color: #666;
	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
}

.zonebadge > em,
.zonebadge > strong {
	margin: 0 2px;
	display: inline-block;
}
/* ... */

